--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -36,8 +36,9 @@ services:
       SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/mydb
       SPRING_DATASOURCE_USERNAME: postgres
       SPRING_DATASOURCE_PASSWORD: LaDeSiempre
-      SPRING_JPA_HIBERNATE_DDL_AUTO: update
+      SPRING_JPA_HIBERNATE_DDL_AUTO: validate
       TIENDA_EXTERNA_URL: http://tiendas-externas:8080
+      SPRING_FLYWAY_ENABLED: true
 
 volumes:
   postgres_data:
