Cambio passwd base de datos

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,14 +6,14 @@ services:
     container_name: gestiontiendas-db
     environment:
       POSTGRES_DB: mydb
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: LaDeSiempre
+      POSTGRES_USER: husna
+      POSTGRES_PASSWORD: husna
     ports:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      test: ["CMD-SHELL", "pg_isready -U husna"]
       interval: 10s
       timeout: 5s
       retries: 5
