--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=gestiontiendas
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/mydb2
-spring.datasource.username=postgres
-spring.datasource.password=LaDeSiempre
+spring.datasource.username=husna
+spring.datasource.password=husna
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
